# checklist

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TRACKER.md
src/: main.rs
src/backend/: config.rs  database.rs  import.rs  mod.rs  task.rs  wipe.rs
src/display/: add.rs  mod.rs  quick_actions.rs  render.rs  text.rs  theme.rs  tui.rs  ui.rs
src/subcommands/: config.rs  database.rs  mod.rs  task.rs  wipe.rs
